upload input from the select box

--- a/app/submit-paper/submit-paper.html
+++ b/app/submit-paper/submit-paper.html
@@ -11,10 +11,10 @@
     <div id="status-bar" class="status-bar"></div>
     <div id="holder">
       <!--todo: also drag things here -->
-      <h1>Store the documents in the supercloudswarm</h1>
-      <button id="the-file-to-upload">Upload a file to the supercloudswarm</button>
-      <div class="upload-success-div" id="upload-success-div">
-        File <span class="upload-success-file-name" id="upload-success-file-name"></span> uploaded successfully.
+      <h1>Store the documents in aletheia</h1>
+      <button id="the-file-to-upload">Permanently share a file</button>
+      <div class="upload-success-div" id="upload-success-div" style="display:none;">
+        File <span class="upload-success-file-name" id="upload-success-file-name"></span> shared successfully.
         File identifier is: <span class="upload-success-file-id" id="upload-success-file-id"></span>
       </div>
       <div id="error-div"></div>
