--- a/app/submit-paper/submit-paper.html
+++ b/app/submit-paper/submit-paper.html
@@ -9,6 +9,7 @@
   </head>
   <body id="body">
     <div id="status-bar" class="status-bar"></div>
+    <div id="status-bar-ethereum" class="status-bar"></div>
     <div id="holder">
       <!--todo: also drag things here -->
       <h1>Store the documents in aletheia</h1>
