show users eth account in UI

--- a/app/submit-paper/submit-paper.html
+++ b/app/submit-paper/submit-paper.html
@@ -10,6 +10,7 @@
   <body id="body">
     <div id="status-bar" class="status-bar"></div>
     <div id="status-bar-ethereum" class="status-bar"></div>
+    <div id="account-div"></div>
     <div id="holder">
       <!--todo: also drag things here -->
       <h1>Store the documents in aletheia</h1>
