intoduce the embark-framework buildtool for building and deploying ethereum contracts more easily

--- a/app/submit-paper/submit-paper.html
+++ b/app/submit-paper/submit-paper.html
@@ -22,6 +22,7 @@
       <div id="error-div"></div>
     </div>
   </body>
+  <script src="../../dist/js/app.js"></script>
   <script>
     // You can also require other files to run in this process
     require('./submit-paper.js')
