add test for the web3 client which adds file to the index. currently unable to test it thorugh the ui

--- a/app/submit-paper/submit-paper.html
+++ b/app/submit-paper/submit-paper.html
@@ -22,7 +22,8 @@
       <div id="error-div"></div>
     </div>
   </body>
-  <script src="../../dist/js/app.js"></script>
+  <!-- this puts SubmittedPapersIndex web3 wrapper on the global scope. -->
+  <script src="../../dist/js/embark-contracts.js"></script>
   <script>
     // You can also require other files to run in this process
     require('./submit-paper.js')
