add list page which lists out hashes of files that have been uploaded to ipfs

--- a/app/submit-paper/submit-paper.html
+++ b/app/submit-paper/submit-paper.html
@@ -19,6 +19,9 @@
         File <span class="upload-success-file-name" id="upload-success-file-name"></span> shared successfully.
         File identifier is: <span class="upload-success-file-id" id="upload-success-file-id"></span>
       </div>
+      <div>
+        <a href="../list/list.html">View all submitted papers</a>
+      </div>
       <div id="error-div"></div>
     </div>
   </body>
