WIP start implementing downloading of files from IPFS

--- a/app/list/list.html
+++ b/app/list/list.html
@@ -14,7 +14,7 @@
     <div id="holder">
       <a href="../submit-paper/submit-paper.html">Submit Paper</a><br/>
 
-      <div id="papers-list"></div>
+      <ul id="papers-list"></ul>
 
       <div id="error-div"></div>
     </div>
