--- a/app/home/home.html
+++ b/app/home/home.html
@@ -6,25 +6,12 @@
     <link href="../common/main.css" rel="stylesheet"></link>
   </head>
   <body id="body">
-    <div id="status-bar" class="status-bar"></div>
-    <h1>Aletheia <span class="subtitle">Search the worlds peer reviewed scientific knowledge.</span></h1>
-    <form>
-      <label for="search-papers">Search papers </label>
-      <input id="search-papers" type="text"/>
-      <button type="submit">Search</button>
-    </form>
-    <p>
-      <a href="#!/not-implemented">How it works</a>
-    </p>
-    <ul>
-      <li><a href="../submit-paper/submit-paper.html">Submit a paper for peer review</a></li>
-      <li><a href="#!/not-implemented">Become a reviewer</a></li>
-    </ul>
-
+    <div id="main"></div>
   </body>
 
   <script>
     // You can also require other files to run in this process
+    require('babel-register');
     require('./home.js')
   </script>
 
