display eth balance on submit paper page

--- a/app/submit-paper/submit-paper.html
+++ b/app/submit-paper/submit-paper.html
@@ -11,6 +11,7 @@
     <div id="status-bar" class="status-bar"></div>
     <div id="status-bar-ethereum" class="status-bar"></div>
     <div id="account-div"></div>
+    <div id="balance-div"></div>
     <div id="holder">
       <!--todo: also drag things here -->
       <h1>Store the documents in aletheia</h1>
