--- a/app/submit-paper/submit-paper.html
+++ b/app/submit-paper/submit-paper.html
@@ -13,19 +13,20 @@
     <div id="account-div"></div>
     <div id="balance-div"></div>
     <div id="holder">
-      <!--todo: also drag things here -->
-      <h1>Store the documents in aletheia</h1>
+    <!--todo: also drag things here -->
+    <h1>Store the documents in aletheia</h1>
 
-      <button id="the-file-to-upload">Permanently share a file</button>
+    <div id="topup-message" style="display:none">To submit a paper to aletheia, you need goodwill. You can get goodwill by solving a captcha
+      <a href="https://theserverbythe.stream">get goodwill</a>
+    </div>
+    <button id="the-file-to-upload">Permanently share a file</button>
 
-      <div class="upload-success-div" id="upload-success-div" style="display:none;">
-        File <span class="upload-success-file-name" id="upload-success-file-name"></span> shared successfully.
-        File identifier is: <span class="upload-success-file-id" id="upload-success-file-id"></span>
-      </div>
-      <div>
-
-        <a href="../list/list.html">View all submitted papers</a>
-      </div>
+    <div class="upload-success-div" id="upload-success-div" style="display:none;">
+      File <span class="upload-success-file-name" id="upload-success-file-name"></span> shared successfully.
+      File identifier is: <span class="upload-success-file-id" id="upload-success-file-id"></span>
+    </div>
+    <div>
+      <a href="../list/list.html">View all submitted papers</a>
       <div id="error-div"></div>
     </div>
   </body>
