--- a/app/submit-paper/submit-paper.html
+++ b/app/submit-paper/submit-paper.html
@@ -17,7 +17,7 @@
     <h1>Store the documents in aletheia</h1>
 
     <div id="topup-message" style="display:none">To submit a paper to aletheia, you need goodwill. You can get goodwill by solving a captcha
-      <a href="https://theserverbythe.stream">get goodwill</a>
+      <a href="../credit-account/credit-account.html">get goodwill</a>
     </div>
     <button id="the-file-to-upload">Permanently share a file</button>
 
