wait on the credit page until crediting transaction has been recieved

--- a/app/credit-account/credit-account.html
+++ b/app/credit-account/credit-account.html
@@ -9,6 +9,7 @@
     <div id="account-div"></div>
     <div id="balance-div"></div>
     <div id="holder">
+    <div class="loading-spinner-outer"><div id="loading-spinner"></div></div>
     Get goodwill to add to the aletheia network
 
     <form id="credit-account-form">
