WIP: add skeleton of angular app. migrate most of web3-client

--- a/app/submit-paper/submit-paper.html
+++ b/app/submit-paper/submit-paper.html
@@ -29,6 +29,7 @@
       <a href="../list/list.html">View all submitted papers</a>
       <div id="error-div"></div>
     </div>
+    </div>
   </body>
   <!-- this puts SubmittedPapersIndex web3 wrapper on the global scope. -->
   <script>
